Added:Authorization using jwt

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-#POSTGRES Pass: 55jdhvrlfLp9jEBr
+#POSTGRES Pass: 54dttBfQ8hvTZcC4
 
-DATABASE_URL="postgres://postgres:55jdhvrlfLp9jEBr@db.vbsadvzjgkgvlwgfztxt.supabase.co:6543/postgres"
+DATABASE_URL="postgresql://postgres:54dttBfQ8hvTZcC4@db.chmtfbyarixbitqjnazc.supabase.co:5432/postgres"
+JWT_SECRET = "HSHJCHJHJHW@jskjk@#HHHEKKBBH*kKKLKL2213244adfsedderd"
