--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.0",
     "@next/font": "13.4.4",
     "@prisma/client": "^4.8.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/validator": "^13.7.17",
+    "bcrypt": "^5.1.0",
     "install": "^0.13.0",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
